practica5.5/Sintactico.output
Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PRINCIPAL bloque

    3 $@2: %empty

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE

    5 $@3: %empty

    6 declar_variables_locales: VAR $@3 variables_locales PUNTOYCOMA
    7                         | %empty

    8 variables_locales: variables_locales cuerpo_declar_variables
    9                  | cuerpo_declar_variables

   10 cuerpo_declar_variables: tipo lista_variables PUNTOYCOMA
   11                        | error

   12 lista_variables: variable COMA lista_variables
   13                | variable error lista_variables
   14                | variable

   15 variable: IDENT

   16 declar_subprogs: declar_subprogs declar_subprog
   17                | %empty

   18 $@4: %empty

   19 $@5: %empty

   20 declar_subprog: $@4 cabecera_subprograma $@5 INICIO sentencias FIN PUNTOYCOMA

   21 $@6: %empty

   22 $@7: %empty

   23 cabecera_subprograma: PROCEDIMIENTO IDENT $@6 PARIZQ lista_parametros PARDER $@7 PUNTOYCOMA
   24                     | PROCEDIMIENTO IDENT PUNTOYCOMA

   25 lista_parametros: parametro PUNTOYCOMA lista_parametros
   26                 | parametro error PUNTOYCOMA lista_parametros
   27                 | parametro

   28 parametro: lista_variables DOSP tipo

   29 $@8: %empty

   30 sentencias: $@8 sentencia sentencias
   31           | %empty

   32 $@9: %empty

   33 sentencia: $@9 bloque
   34          | asignacion

   35 $@10: %empty

   36 $@11: %empty

   37 sentencia: $@10 si PUNTOYCOMA $@11

   38 $@12: %empty

   39 sentencia: $@12 mientras

   40 $@13: %empty

   41 sentencia: $@13 entrada PUNTOYCOMA

   42 $@14: %empty

   43 sentencia: $@14 salida PUNTOYCOMA

   44 $@15: %empty

   45 sentencia: $@15 for
   46          | llamada_funcion
   47          | variable AVANRETR PUNTOYCOMA
   48          | DOLAR variable PUNTOYCOMA

   49 asignacion: variable ASIGNACION expresion PUNTOYCOMA

   50 si: SI PARIZQ expresion PARDER ENTONCES sentencia

   51 @16: %empty

   52 $@17: %empty

   53 si: SI PARIZQ expresion PARDER ENTONCES sentencia @16 SINO $@17 sentencia

   54 $@18: %empty

   55 mientras: MIENTRAS PARIZQ expresion PARDER $@18 sentencia PUNTOYCOMA

   56 entrada: LEER lista_variables

   57 salida: ESCRIBIR lista_expresiones_cad

   58 $@19: %empty

   59 $@20: %empty

   60 for: PARA variable DOSP ASIGNACION expresion HASTA expresion HACER INICIO $@19 sentencia $@20 FIN PUNTOYCOMA

   61 expresion: PARIZQ expresion PARDER
   62          | OPUNARIO expresion
   63          | SUMRES expresion
   64          | expresion OPBINARIO expresion
   65          | expresion OPOR expresion
   66          | expresion OPRELACIONAL expresion
   67          | expresion SUMRES expresion
   68          | expresion OPAND expresion
   69          | expresion OPBINLISTA expresion
   70          | expresion ARROBA expresion
   71          | expresion ARROBA expresion MASMAS expresion
   72          | variable
   73          | constante
   74          | CORIZQ agregado CORDER
   75          | error

   76 lista_expresiones: expresion COMA lista_expresiones
   77                  | expresion

   78 lista_expresiones_cad: exp_cad COMA lista_expresiones_cad
   79                      | exp_cad

   80 exp_cad: expresion
   81        | CONSTCADENA

   82 constante: CONSTENTERA
   83          | CONSTLOGICA
   84          | CONSTREAL
   85          | CONSTCARACTER

   86 $@21: %empty

   87 llamada_funcion: IDENT PARIZQ $@21 lista_expresiones PARDER PUNTOYCOMA
   88                | IDENT PARIZQ PARDER PUNTOYCOMA

   89 agregado: agregado_enteros
   90         | agregado_reales
   91         | agregado_caracteres
   92         | agregado_booleanos
   93         | agregado_cadenas

   94 agregado_enteros: agregado_enteros COMA CONSTENTERA
   95                 | CONSTENTERA

   96 agregado_reales: agregado_reales COMA CONSTREAL
   97                | CONSTREAL

   98 agregado_caracteres: agregado_caracteres COMA CONSTCARACTER
   99                    | CONSTCARACTER

  100 agregado_booleanos: agregado_booleanos COMA CONSTLOGICA
  101                   | CONSTLOGICA

  102 agregado_cadenas: agregado_cadenas COMA CONSTCADENA
  103                 | CONSTCADENA

  104 tipo: LISTA TIPOBASICO
  105     | TIPOBASICO
  106     | error


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 11 13 26 75 106
    OPOR (258) 65
    OPAND (259) 68
    OPRELACIONAL (260) 66
    SUMRES (261) 63 67
    OPBINARIO (262) 64
    OPUNARIO (263) 62
    OPBINLISTA (264) 69
    ARROBA (265) 70 71
    MASMAS (266) 71
    ASIGNACION (267) 49 60
    CORIZQ (268) 74
    CORDER (269) 74
    TIPOBASICO (270) 104 105
    CONSTENTERA (271) 82 94 95
    CONSTLOGICA (272) 83 100 101
    CONSTREAL (273) 84 96 97
    CONSTCARACTER (274) 85 98 99
    CONSTCADENA (275) 81 102 103
    COMA (276) 12 76 78 94 96 98 100 102
    PARDER (277) 23 50 53 55 61 87 88
    PARIZQ (278) 23 50 53 55 61 87 88
    PUNTOYCOMA (279) 6 10 20 23 24 25 26 37 41 43 47 48 49 55 60 87 88
    INICIOBLOQUE (280) 4
    FINBLOQUE (281) 4
    VAR (282) 6
    SI (283) 50 53
    SINO (284) 53
    MIENTRAS (285) 55
    LEER (286) 56
    ESCRIBIR (287) 57
    HASTA (288) 60
    PRINCIPAL (289) 2
    PROCEDIMIENTO (290) 23 24
    DOSP (291) 28 60
    INICIO (292) 20 60
    FIN (293) 20 60
    ENTONCES (294) 50 53
    PARA (295) 60
    HACER (296) 60
    AVANRETR (297) 47
    DOLAR (298) 48
    LISTA (299) 104
    IDENT (300) 15 23 24 87 88


No terminales con las reglas donde aparecen

    $accept (46)
        on left: 0
    programa (47)
        on left: 2
        on right: 0
    $@1 (48)
        on left: 1
        on right: 2
    bloque (49)
        on left: 4
        on right: 2 33
    $@2 (50)
        on left: 3
        on right: 4
    declar_variables_locales (51)
        on left: 6 7
        on right: 4
    $@3 (52)
        on left: 5
        on right: 6
    variables_locales (53)
        on left: 8 9
        on right: 6 8
    cuerpo_declar_variables (54)
        on left: 10 11
        on right: 8 9
    lista_variables (55)
        on left: 12 13 14
        on right: 10 12 13 28 56
    variable (56)
        on left: 15
        on right: 12 13 14 47 48 49 60 72
    declar_subprogs (57)
        on left: 16 17
        on right: 4 16
    declar_subprog (58)
        on left: 20
        on right: 16
    $@4 (59)
        on left: 18
        on right: 20
    $@5 (60)
        on left: 19
        on right: 20
    cabecera_subprograma (61)
        on left: 23 24
        on right: 20
    $@6 (62)
        on left: 21
        on right: 23
    $@7 (63)
        on left: 22
        on right: 23
    lista_parametros (64)
        on left: 25 26 27
        on right: 23 25 26
    parametro (65)
        on left: 28
        on right: 25 26 27
    sentencias (66)
        on left: 30 31
        on right: 4 20 30
    $@8 (67)
        on left: 29
        on right: 30
    sentencia (68)
        on left: 33 34 37 39 41 43 45 46 47 48
        on right: 30 50 53 55 60
    $@9 (69)
        on left: 32
        on right: 33
    $@10 (70)
        on left: 35
        on right: 37
    $@11 (71)
        on left: 36
        on right: 37
    $@12 (72)
        on left: 38
        on right: 39
    $@13 (73)
        on left: 40
        on right: 41
    $@14 (74)
        on left: 42
        on right: 43
    $@15 (75)
        on left: 44
        on right: 45
    asignacion (76)
        on left: 49
        on right: 34
    si (77)
        on left: 50 53
        on right: 37
    @16 (78)
        on left: 51
        on right: 53
    $@17 (79)
        on left: 52
        on right: 53
    mientras (80)
        on left: 55
        on right: 39
    $@18 (81)
        on left: 54
        on right: 55
    entrada (82)
        on left: 56
        on right: 41
    salida (83)
        on left: 57
        on right: 43
    for (84)
        on left: 60
        on right: 45
    $@19 (85)
        on left: 58
        on right: 60
    $@20 (86)
        on left: 59
        on right: 60
    expresion (87)
        on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 49 50 53 55 60 61 62 63 64 65 66 67 68 69 70 71 76 77 80
    lista_expresiones (88)
        on left: 76 77
        on right: 76 87
    lista_expresiones_cad (89)
        on left: 78 79
        on right: 57 78
    exp_cad (90)
        on left: 80 81
        on right: 78 79
    constante (91)
        on left: 82 83 84 85
        on right: 73
    llamada_funcion (92)
        on left: 87 88
        on right: 46
    $@21 (93)
        on left: 86
        on right: 87
    agregado (94)
        on left: 89 90 91 92 93
        on right: 74
    agregado_enteros (95)
        on left: 94 95
        on right: 89 94
    agregado_reales (96)
        on left: 96 97
        on right: 90 96
    agregado_caracteres (97)
        on left: 98 99
        on right: 91 98
    agregado_booleanos (98)
        on left: 100 101
        on right: 92 100
    agregado_cadenas (99)
        on left: 102 103
        on right: 93 102
    tipo (100)
        on left: 104 105 106
        on right: 10 28


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 1 ($@1)

    programa  ir al estado 1
    $@1       ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 programa: $@1 . PRINCIPAL bloque

    PRINCIPAL  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    2 programa: $@1 PRINCIPAL . bloque

    INICIOBLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 6


Estado 5

    4 bloque: INICIOBLOQUE . $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 7


Estado 6

    2 programa: $@1 PRINCIPAL bloque .

    $default  reduce usando la regla 2 (programa)


Estado 7

    4 bloque: INICIOBLOQUE $@2 . declar_variables_locales declar_subprogs sentencias FINBLOQUE

    VAR  desplazar e ir al estado 8

    $default  reduce usando la regla 7 (declar_variables_locales)

    declar_variables_locales  ir al estado 9


Estado 8

    6 declar_variables_locales: VAR . $@3 variables_locales PUNTOYCOMA

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 10


Estado 9

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales . declar_subprogs sentencias FINBLOQUE

    $default  reduce usando la regla 17 (declar_subprogs)

    declar_subprogs  ir al estado 11


Estado 10

    6 declar_variables_locales: VAR $@3 . variables_locales PUNTOYCOMA

    error       desplazar e ir al estado 12
    TIPOBASICO  desplazar e ir al estado 13
    LISTA       desplazar e ir al estado 14

    variables_locales        ir al estado 15
    cuerpo_declar_variables  ir al estado 16
    tipo                     ir al estado 17


Estado 11

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs . sentencias FINBLOQUE
   16 declar_subprogs: declar_subprogs . declar_subprog

    FINBLOQUE      reduce usando la regla 31 (sentencias)
    PROCEDIMIENTO  reduce usando la regla 18 ($@4)
    $default       reduce usando la regla 29 ($@8)

    declar_subprog  ir al estado 18
    $@4             ir al estado 19
    sentencias      ir al estado 20
    $@8             ir al estado 21


Estado 12

   11 cuerpo_declar_variables: error .
  106 tipo: error .

    IDENT     reduce usando la regla 106 (tipo)
    $default  reduce usando la regla 11 (cuerpo_declar_variables)


Estado 13

  105 tipo: TIPOBASICO .

    $default  reduce usando la regla 105 (tipo)


Estado 14

  104 tipo: LISTA . TIPOBASICO

    TIPOBASICO  desplazar e ir al estado 22


Estado 15

    6 declar_variables_locales: VAR $@3 variables_locales . PUNTOYCOMA
    8 variables_locales: variables_locales . cuerpo_declar_variables

    error       desplazar e ir al estado 12
    TIPOBASICO  desplazar e ir al estado 13
    PUNTOYCOMA  desplazar e ir al estado 23
    LISTA       desplazar e ir al estado 14

    cuerpo_declar_variables  ir al estado 24
    tipo                     ir al estado 17


Estado 16

    9 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 9 (variables_locales)


Estado 17

   10 cuerpo_declar_variables: tipo . lista_variables PUNTOYCOMA

    IDENT  desplazar e ir al estado 25

    lista_variables  ir al estado 26
    variable         ir al estado 27


Estado 18

   16 declar_subprogs: declar_subprogs declar_subprog .

    $default  reduce usando la regla 16 (declar_subprogs)


Estado 19

   20 declar_subprog: $@4 . cabecera_subprograma $@5 INICIO sentencias FIN PUNTOYCOMA

    PROCEDIMIENTO  desplazar e ir al estado 28

    cabecera_subprograma  ir al estado 29


Estado 20

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias . FINBLOQUE

    FINBLOQUE  desplazar e ir al estado 30


Estado 21

   30 sentencias: $@8 . sentencia sentencias

    DOLAR  desplazar e ir al estado 31
    IDENT  desplazar e ir al estado 32

    SI        reduce usando la regla 35 ($@10)
    MIENTRAS  reduce usando la regla 38 ($@12)
    LEER      reduce usando la regla 40 ($@13)
    ESCRIBIR  reduce usando la regla 42 ($@14)
    PARA      reduce usando la regla 44 ($@15)
    $default  reduce usando la regla 32 ($@9)

    variable         ir al estado 33
    sentencia        ir al estado 34
    $@9              ir al estado 35
    $@10             ir al estado 36
    $@12             ir al estado 37
    $@13             ir al estado 38
    $@14             ir al estado 39
    $@15             ir al estado 40
    asignacion       ir al estado 41
    llamada_funcion  ir al estado 42


Estado 22

  104 tipo: LISTA TIPOBASICO .

    $default  reduce usando la regla 104 (tipo)


Estado 23

    6 declar_variables_locales: VAR $@3 variables_locales PUNTOYCOMA .

    $default  reduce usando la regla 6 (declar_variables_locales)


Estado 24

    8 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 8 (variables_locales)


Estado 25

   15 variable: IDENT .

    $default  reduce usando la regla 15 (variable)


Estado 26

   10 cuerpo_declar_variables: tipo lista_variables . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 43


Estado 27

   12 lista_variables: variable . COMA lista_variables
   13                | variable . error lista_variables
   14                | variable .

    error  desplazar e ir al estado 44
    COMA   desplazar e ir al estado 45

    PUNTOYCOMA  reduce usando la regla 14 (lista_variables)
    DOSP        reduce usando la regla 14 (lista_variables)


Estado 28

   23 cabecera_subprograma: PROCEDIMIENTO . IDENT $@6 PARIZQ lista_parametros PARDER $@7 PUNTOYCOMA
   24                     | PROCEDIMIENTO . IDENT PUNTOYCOMA

    IDENT  desplazar e ir al estado 46


Estado 29

   20 declar_subprog: $@4 cabecera_subprograma . $@5 INICIO sentencias FIN PUNTOYCOMA

    $default  reduce usando la regla 19 ($@5)

    $@5  ir al estado 47


Estado 30

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE .

    $default  reduce usando la regla 4 (bloque)


Estado 31

   48 sentencia: DOLAR . variable PUNTOYCOMA

    IDENT  desplazar e ir al estado 25

    variable  ir al estado 48


Estado 32

   15 variable: IDENT .
   87 llamada_funcion: IDENT . PARIZQ $@21 lista_expresiones PARDER PUNTOYCOMA
   88                | IDENT . PARIZQ PARDER PUNTOYCOMA

    PARIZQ  desplazar e ir al estado 49

    $default  reduce usando la regla 15 (variable)


Estado 33

   47 sentencia: variable . AVANRETR PUNTOYCOMA
   49 asignacion: variable . ASIGNACION expresion PUNTOYCOMA

    ASIGNACION  desplazar e ir al estado 50
    AVANRETR    desplazar e ir al estado 51


Estado 34

   30 sentencias: $@8 sentencia . sentencias

    FINBLOQUE  reduce usando la regla 31 (sentencias)
    FIN        reduce usando la regla 31 (sentencias)
    $default   reduce usando la regla 29 ($@8)

    sentencias  ir al estado 52
    $@8         ir al estado 21


Estado 35

   33 sentencia: $@9 . bloque

    INICIOBLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 53


Estado 36

   37 sentencia: $@10 . si PUNTOYCOMA $@11

    SI  desplazar e ir al estado 54

    si  ir al estado 55


Estado 37

   39 sentencia: $@12 . mientras

    MIENTRAS  desplazar e ir al estado 56

    mientras  ir al estado 57


Estado 38

   41 sentencia: $@13 . entrada PUNTOYCOMA

    LEER  desplazar e ir al estado 58

    entrada  ir al estado 59


Estado 39

   43 sentencia: $@14 . salida PUNTOYCOMA

    ESCRIBIR  desplazar e ir al estado 60

    salida  ir al estado 61


Estado 40

   45 sentencia: $@15 . for

    PARA  desplazar e ir al estado 62

    for  ir al estado 63


Estado 41

   34 sentencia: asignacion .

    $default  reduce usando la regla 34 (sentencia)


Estado 42

   46 sentencia: llamada_funcion .

    $default  reduce usando la regla 46 (sentencia)


Estado 43

   10 cuerpo_declar_variables: tipo lista_variables PUNTOYCOMA .

    $default  reduce usando la regla 10 (cuerpo_declar_variables)


Estado 44

   13 lista_variables: variable error . lista_variables

    IDENT  desplazar e ir al estado 25

    lista_variables  ir al estado 64
    variable         ir al estado 27


Estado 45

   12 lista_variables: variable COMA . lista_variables

    IDENT  desplazar e ir al estado 25

    lista_variables  ir al estado 65
    variable         ir al estado 27


Estado 46

   23 cabecera_subprograma: PROCEDIMIENTO IDENT . $@6 PARIZQ lista_parametros PARDER $@7 PUNTOYCOMA
   24                     | PROCEDIMIENTO IDENT . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 66

    $default  reduce usando la regla 21 ($@6)

    $@6  ir al estado 67


Estado 47

   20 declar_subprog: $@4 cabecera_subprograma $@5 . INICIO sentencias FIN PUNTOYCOMA

    INICIO  desplazar e ir al estado 68


Estado 48

   48 sentencia: DOLAR variable . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 69


Estado 49

   87 llamada_funcion: IDENT PARIZQ . $@21 lista_expresiones PARDER PUNTOYCOMA
   88                | IDENT PARIZQ . PARDER PUNTOYCOMA

    PARDER  desplazar e ir al estado 70

    $default  reduce usando la regla 86 ($@21)

    $@21  ir al estado 71


Estado 50

   49 asignacion: variable ASIGNACION . expresion PUNTOYCOMA

    error          desplazar e ir al estado 72
    SUMRES         desplazar e ir al estado 73
    OPUNARIO       desplazar e ir al estado 74
    CORIZQ         desplazar e ir al estado 75
    CONSTENTERA    desplazar e ir al estado 76
    CONSTLOGICA    desplazar e ir al estado 77
    CONSTREAL      desplazar e ir al estado 78
    CONSTCARACTER  desplazar e ir al estado 79
    PARIZQ         desplazar e ir al estado 80
    IDENT          desplazar e ir al estado 25

    variable   ir al estado 81
    expresion  ir al estado 82
    constante  ir al estado 83


Estado 51

   47 sentencia: variable AVANRETR . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 84


Estado 52

   30 sentencias: $@8 sentencia sentencias .

    $default  reduce usando la regla 30 (sentencias)


Estado 53

   33 sentencia: $@9 bloque .

    $default  reduce usando la regla 33 (sentencia)


Estado 54

   50 si: SI . PARIZQ expresion PARDER ENTONCES sentencia
   53   | SI . PARIZQ expresion PARDER ENTONCES sentencia @16 SINO $@17 sentencia

    PARIZQ  desplazar e ir al estado 85


Estado 55

   37 sentencia: $@10 si . PUNTOYCOMA $@11

    PUNTOYCOMA  desplazar e ir al estado 86


Estado 56

   55 mientras: MIENTRAS . PARIZQ expresion PARDER $@18 sentencia PUNTOYCOMA

    PARIZQ  desplazar e ir al estado 87


Estado 57

   39 sentencia: $@12 mientras .

    $default  reduce usando la regla 39 (sentencia)


Estado 58

   56 entrada: LEER . lista_variables

    IDENT  desplazar e ir al estado 25

    lista_variables  ir al estado 88
    variable         ir al estado 27


Estado 59

   41 sentencia: $@13 entrada . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 89


Estado 60

   57 salida: ESCRIBIR . lista_expresiones_cad
